Change Log for OpenXava project
===============================

- Inline style no longer allowed in HTML.
- Inline style removed from all generated HTML code by OpenXava.
- Many methods from org.openxava.web.Style removed, used internally by UI generator.
- Data and time for posts in @Discussion use the format of date fields.
- Attribute cssStyle ignored in <xava:link> and <xava:image> taglibs.
- New classes in base.css to use as alternative to inline style, like ox-display-none, ox-width-100, etc. 
- Fix: UI with no CSS style at all if the user has as preference a no longer existing theme. 
- New <xava:nonce/> taglib to generate a nonce number for using in inline JavaScript.
- Fix: Inline JavaScript for events in HTML elements.
- Fix: XSLT injection vulnerabilities.
- Fix: X-Content-Type-Options Header Missing.
- Fix: Cookie without SameSite attribute.
- Fix: Application error disclosure.
- Fix: Session ID in URL rewrite.
- Fix: Cross-Site Scripting (XSS) vulnerabilities.
- Fix: Data filtering in .htaccess for some URLs.
- Fix: Content Security Policy (CSP) Header Not Set.
- New @Mask annotation to define the valid format for entering data in a text field.
- HtmlUnit upgraded to 2.70.
- Fix: Denial of service vulnerability.
- Embedded Tomcat used in development upgraded to 9.0.73.
- Log4j-api and core upgraded to 2.20.0.
- Jersey client, hk2 and media upgraded to 2.39.
- Lombok upgraded to 1.18.26.
- Jsoup upgraded to 1.15.4.
- Groovy upgraded to 4.0.10.
- Hibernate upgraded to 5.6.15.Final.
- Commons-fileupload upgraded to 1.5.
- Driver version in doc and new projects upgraded for PostgreSQL, Oracle, AS/400.
- New action in references to clear the reference value just clicking on a button.
- New action in @DescriptionsList to clear the selected value of the combo just clicking on a button.
- New article in documentation to use Kotlin to develop with OpenXava in English, Spanish and Chinese.