@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- New property signInJSP in naviox.properties to define a custom login page.
 - Inline style no longer allowed in HTML.
 - Inline style removed from all generated HTML code by OpenXava.
 - Many methods from org.openxava.web.Style removed, used internally by UI generator.
